fix css for dark mode

--- a/docs/_static/css/algolia.css
+++ b/docs/_static/css/algolia.css
@@ -12,3 +12,33 @@
 .bd-article-container {
     z-index: 10;
 }
+
+
+body:not([data-theme="light"]) .DocSearch-Button {
+    background-color: #3d4751 !important;
+    color: white !important;
+}
+
+body:not([data-theme="light"]) .DocSearch-Search-Icon {
+    color: white !important;
+}
+
+body:not([data-theme="light"]) .DocSearch-Button-Key {
+    color: black !important;
+    box-shadow: 0 .0625rem 0 rgba(0, 0, 0, .2), inset 0 0 0 0.01rem #3d4751 !important;
+    font-family: "SFMono-Regular", Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace !important;
+    padding: 0 !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+body:not([data-theme="light"]) .DocSearch-Commands-Key {
+    color: black !important;
+    box-shadow: 0 .0625rem 0 rgba(0, 0, 0, .2), inset 0 0 0 .01rem #858a8f !important;
+    font-family: "SFMono-Regular", Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace !important;
+    padding: 0 !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
